#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.70])
AC_INIT([dockerWithCtie],[0.0.0],[matsuand AT osdn DOT me])
AC_CONFIG_SRCDIR([ctie/ctie-k.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wno-portability])
AM_MAINTAINER_MODE

m4_include([m4/progs.m4])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([malloc.h stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([strerror])

AC_CONFIG_FILES([Makefile
		 ctie/Makefile
		 src/Makefile
		 src/_data/Makefile
		 src/_data/buildx/Makefile
		 src/_data/cluster/Makefile
		 src/_data/compose-cli/Makefile
		 src/_data/docker-app/Makefile
		 src/_data/docsarchive/Makefile
		 src/_data/engine-cli/Makefile
		 src/_includes/Makefile
		 src/_includes/analytics/Makefile
		 src/_includes/content/Makefile
		 src/_includes/content/ssh/Makefile
		 src/_includes/landing-page/Makefile
		 src/_layouts/Makefile
		 src/_samples/Makefile
		 src/_samples/library/Makefile
		 src/_scss/Makefile
		 src/app/Makefile
		 src/buildx/Makefile
		 src/ci-cd/Makefile
		 src/ci-cd/images/Makefile
		 src/cloud/Makefile
		 src/compliance/Makefile
		 src/compliance/cis/Makefile
		 src/compliance/images/Makefile
		 src/compliance/nist/Makefile
		 src/compliance/reference/Makefile
		 src/compliance/reference/800-53/Makefile
		 src/compose/Makefile
		 src/compose/compose-file/Makefile
		 src/compose/images/Makefile
		 src/compose/reference/Makefile
		 src/config/Makefile
		 src/config/containers/Makefile
		 src/config/containers/logging/Makefile
		 src/config/daemon/Makefile
		 src/config/daemon/images/Makefile
		 src/css/Makefile
		 src/datacenter/Makefile
		 src/datacenter/dtr/Makefile
		 src/datacenter/dtr/2.0/Makefile
		 src/datacenter/dtr/2.0/configure/Makefile
		 src/datacenter/dtr/2.0/high-availability/Makefile
		 src/datacenter/dtr/2.0/install/Makefile
		 src/datacenter/dtr/2.0/install/upgrade/Makefile
		 src/datacenter/dtr/2.0/monitor-troubleshoot/Makefile
		 src/datacenter/dtr/2.0/release-notes/Makefile
		 src/datacenter/dtr/2.0/repos-and-images/Makefile
		 src/datacenter/dtr/2.0/user-management/Makefile
		 src/datacenter/dtr/2.1/Makefile
		 src/datacenter/dtr/2.1/guides/Makefile
		 src/datacenter/dtr/2.4/Makefile
		 src/datacenter/dtr/2.4/guides/Makefile
		 src/datacenter/dtr/2.4/guides/admin/Makefile
		 src/datacenter/dtr/2.4/guides/admin/configure/Makefile
		 src/datacenter/dtr/2.5/Makefile
		 src/datacenter/dtr/2.5/guides/Makefile
		 src/datacenter/dtr/2.5/reference/Makefile
		 src/datacenter/dtr/2.5/reference/cli/Makefile
		 src/datacenter/ucp/Makefile
		 src/datacenter/ucp/3.0/Makefile
		 src/datacenter/ucp/3.0/reference/Makefile
		 src/datacenter/ucp/3.0/reference/api/Makefile
		 src/datacenter/ucp/3.0/reference/cli/Makefile
		 src/datacenter/ucp/3.1/Makefile
		 src/datacenter/ucp/3.1/guides/Makefile
		 src/datacenter/ucp/3.1/guides/admin/Makefile
		 src/datacenter/ucp/3.1/guides/admin/install/Makefile
		 src/desktop/Makefile
		 src/desktop/enterprise/Makefile
		 src/desktop/images/Makefile
		 src/develop/Makefile
		 src/develop/develop-images/Makefile
		 src/develop/scan-images/Makefile
		 src/develop/scan-images/images/Makefile
		 src/docker-for-mac/Makefile
		 src/docker-for-mac/images/Makefile
		 src/docker-for-mac/images/menu/Makefile
		 src/docker-for-windows/Makefile
		 src/docker-for-windows/images/Makefile
		 src/docker-hub/Makefile
		 src/docker-hub/2fa/Makefile
		 src/docker-hub/api/Makefile
		 src/docker-hub/api/latest/Makefile
		 src/docker-hub/billing/Makefile
		 src/docker-hub/billing/images/Makefile
		 src/docker-hub/builds/Makefile
		 src/docker-hub/builds/images/Makefile
		 src/docker-hub/images/Makefile
		 src/docker-hub/publish/Makefile
		 src/docker-hub/publish/images/Makefile
		 src/docker-id/Makefile
		 src/docker-id/images/Makefile
		 src/ee/Makefile
		 src/ee/admin/Makefile
		 src/ee/admin/backup/Makefile
		 src/ee/ucp/Makefile
		 src/ee/ucp/admin/Makefile
		 src/ee/ucp/admin/monitor-and-troubleshoot/Makefile
		 src/engine/Makefile
		 src/engine/api/Makefile
		 src/engine/api/latest/Makefile
		 src/engine/api/sdk/Makefile
		 src/engine/api/v1.25/Makefile
		 src/engine/api/v1.26/Makefile
		 src/engine/api/v1.27/Makefile
		 src/engine/api/v1.28/Makefile
		 src/engine/api/v1.29/Makefile
		 src/engine/api/v1.30/Makefile
		 src/engine/api/v1.31/Makefile
		 src/engine/api/v1.32/Makefile
		 src/engine/api/v1.33/Makefile
		 src/engine/api/v1.34/Makefile
		 src/engine/api/v1.35/Makefile
		 src/engine/api/v1.36/Makefile
		 src/engine/api/v1.37/Makefile
		 src/engine/api/v1.38/Makefile
		 src/engine/api/v1.39/Makefile
		 src/engine/api/v1.40/Makefile
		 src/engine/context/Makefile
		 src/engine/extend/Makefile
		 src/engine/extend/images/Makefile
		 src/engine/images/Makefile
		 src/engine/install/Makefile
		 src/engine/reference/Makefile
		 src/engine/reference/commandline/Makefile
		 src/engine/release-notes/Makefile
		 src/engine/security/Makefile
		 src/engine/security/https/Makefile
		 src/engine/security/trust/Makefile
		 src/engine/security/trust/images/Makefile
		 src/engine/scan/Makefile
		 src/engine/swarm/Makefile
		 src/engine/swarm/how-swarm-mode-works/Makefile
		 src/engine/swarm/images/Makefile
		 src/engine/swarm/swarm-tutorial/Makefile
		 src/engine/tutorials/Makefile
		 src/go/Makefile
		 src/get-started/Makefile
		 src/get-started/images/Makefile
		 src/images/Makefile
		 src/js/Makefile
		 src/kitematic/Makefile
		 src/kitematic/images/Makefile
		 src/language/Makefile
		 src/language/images/Makefile
		 src/language/java/Makefile
		 src/language/java/images/Makefile
		 src/language/nodejs/Makefile
		 src/language/nodejs/images/Makefile
		 src/language/python/Makefile
		 src/machine/Makefile
		 src/machine/drivers/Makefile
		 src/machine/examples/Makefile
		 src/machine/img/Makefile
		 src/machine/reference/Makefile
		 src/network/Makefile
		 src/network/images/Makefile
		 src/notary/Makefile
		 src/notary/images/Makefile
		 src/notary/reference/Makefile
		 src/opensource/Makefile
		 src/opensource/images/Makefile
		 src/reference/Makefile
		 src/registry/Makefile
		 src/registry/images/Makefile
		 src/registry/recipes/Makefile
		 src/registry/recipes/osx/Makefile
		 src/registry/spec/Makefile
		 src/registry/spec/auth/Makefile
		 src/registry/spec/images/Makefile
		 src/registry/storage-drivers/Makefile
		 src/release-notes/Makefile
		 src/samples/Makefile
		 src/samples/images/Makefile
		 src/storage/Makefile
		 src/storage/images/Makefile
		 src/storage/storagedriver/Makefile
		 src/storage/storagedriver/images/Makefile
		 src/toolbox/Makefile])
AC_OUTPUT
